更新：增强兼容性

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       }
     </script>
     <script type="module">
-      import * as module from "./src/index.js";
-      // import * as module from "./dist/index.js";
+      // import * as module from "./src/index.js";
+      import * as module from "./dist/index.js";
 
       console.dir(module);
     </script>
