--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
     <jyo-window size="{width: 400, height: 200}" topmost>
       <div slot="title">置顶窗口2</div>
       <jyo-text-box></jyo-text-box>
+      <jyo-password-box></jyo-password-box>
     </jyo-window>
 
     <jyo-window size="{width: 640, height: 480}">
