--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         </div>
       </jyo-dialog>
       <br /><br />
-      <jyo-tree-view tree-view-selection-mode="multiple">
+      <jyo-tree-view tree-view-selection-mode="single">
         <jyo-tree-view-item text="根节点1">
           <jyo-tree-view-item text="子节点1">
             <jyo-tree-view-item text="子子节点1"></jyo-tree-view-item>
