--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
 
     <jyo-window size="{width: 640, height: 480}">
       <div slot="title">测试窗口2</div>
-      <jyo-text-box></jyo-text-box><br /><br />
-      <jyo-password-box></jyo-password-box><br /><br />
+      <jyo-text-box placeholder="请输入账号"></jyo-text-box><br /><br />
+      <jyo-password-box placeholder="请输入密码"></jyo-password-box><br /><br />
       <jyo-button id="btnOpenDialog">打开对话框</jyo-button>
       <jyo-dialog title-text="测试对话框">
         <div>
