更新：优化一些开发体验

--- a/index.html
+++ b/index.html
@@ -222,23 +222,7 @@
 </jyo-dock-panel>
   </jyo-window>
 
-  <script type="module">
-    import { DockPanel } from "./src/index.js";
-    customElements.whenDefined("jyo-dock-panel").then(() => {
-      const dockPanel = document.getElementById('myDock');
-
-      // 创建一个新元素
-      const newElement = document.createElement('div');
-      newElement.textContent = '这是动态添加的面板';
-
-      // 设置面板大小
-      // dockPanel.leftWidth = '300px';
-
-      // 隐藏/显示面板
-      // dockPanel.bottomVisible = false; // 隐藏底部面板
-    });
-   
-  </script>
+  <script type="module" src="./index.js"></script>
 </body>
 
 </html>
