更新：新增进度环组件

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <jyo-check-box content="两态勾选框"></jyo-check-box>
     <jyo-check-box is-three-state content="三态勾选框"></jyo-check-box>
     <jyo-progress-bar value="80"></jyo-progress-bar>
+    <jyo-progress-ring value="80" is-indeterminate></jyo-progress-ring>
     <jyo-radio-buttons header="选项：" selected-index="1">
       <jyo-radio-button content="单选框1"></jyo-radio-button>
       <jyo-radio-button content="单选框2"></jyo-radio-button>
