更新：增加babel转译流程

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     }
 </script> -->
   <script type="module">
-    import * as module from "./src/index.js";
-    // import * as module from "./dist/components.js";
+    // import * as module from "./src/index.js";
+    import * as module from "./dist/components.js";
 
     console.dir(module);
 
